overflow fix

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -24,7 +24,7 @@
      }
 
      nav {
-        overflow: hidden;
+        overflow-x: hidden;
          height: 20%;
          width: 100%;
          display: flex;
